Tuesday, January 15 2002, James Turner

	* Rewrote proeprty handling completely : should be
	  much simpler (no unsync() / resync()) and much more
	  flexible now. Properties now have get and set signals
	  that can be observed for value changes.
	* Moved all the attribute handling into setProperty(),
	  removing the coresponding code from recvSet/Sight/Move.
	  This unifies the decoding of every attribute, but
	  also bypasses the Atlas::Objects handling of core
	  attributes (only relevant for name, location, stamp
	  and position).

Monday, January 14 2002, James Turner

	* Skstream exception handling fixes, suggested by
	  Stepher Meier.
	* Fixed to bugs and general tweaking of attribute synchronisation
	  in Entity : this code hasn't been excercised before, so it's
	  a bit wrinkly.
	* CodeWarrior and GCC 3.0 return value warning fixes from
	  Michael Koch and Jesse Jones

Wednesday, December 26 2001, James Turner

	* Tweaked configure.in slightly, to use CXXFLAGS. Should
	  correctly pick up CXXFLAGS / CFLAGS variables if they are set.
	* Made an assertion in Room.cpp more verbose becuase I hit it once,
	  using stage. This maybe a sequencing issue (similar to what
	  happens when logging in before the type hierarchy has fully
	  transferred)
	* Provide a platform specific way to access the underlying connection
	  primitive (i.e the socket's file-descriptor under POSIX). This is
	  to allow efficent integration with the Gtk+ main-loop system,
	  which cna automatically poll file-descriptors and invoke callbacks.

Saturday, December 22 2001, James Turner

	* Committed build improvement by Michael Kocg - Eris now as
	  an eris-config script and M4 macro file, so much more
	  reliable configure scripts can be setup by clients.

Friday, December 21 2001, James Turner

	* Standardised Entity signals to *not* include 'this' as
	  an argument. If this behaviour is desired, using SigC::bind()
	  to achieve the same affect when connection to the Signal.