@@ -7,16 +7,29 @@
 namespace Eris
 {
    
-typedef SigC::Signal0<Atlas::Message::Object> Getter;    
+typedef SigC::Signal1<void, Atlas::Message::Object&> Getter;    
 typedef SigC::Signal1<void, const Atlas::Message::Object&> Setter;
 
 class Property : public SigC::Object
 {
 public:    
-    Getter get;
-    Setter set;
+    Getter Get;	///< emitted before the proeprty value is retrieved
+    Setter Set;	///< emitted after the property value is set
 
-    Atlas::Message::Object value;
+    const Atlas::Message::Object& getValue()
+    {
+	Get.emit(_value);
+	return _value;
+    }
+
+    void setValue(const Atlas::Message::Object& v)
+    {
+	_value = v;
+	Set.emit(v);
+    }
+    
+protected:
+    Atlas::Message::Object _value;
 };
     
 }
