@@ -1,6 +1,6 @@
 AC_INIT(src/Entity.cpp)
 
-AM_INIT_AUTOMAKE(eris, 0.9.0)
+AM_INIT_AUTOMAKE(eris, 0.9.1)
 AM_MAINTAINER_MODE
 
 AM_CONFIG_HEADER(config.h)	
@@ -23,7 +23,7 @@ AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 
 dnl Check for libsigc++
-AM_PATH_SIGC(1.0.0,[
+AM_PATH_SIGC(1.0.3,[
 	CXXFLAGS="$CXXFLAGS $SIGC_CFLAGS"
 	LDFLAGS="$LDFLAGS $SIGC_LIBS"
 	],
